--- a/topcoder/contestapplet.conf
+++ b/topcoder/contestapplet.conf
@@ -1,12 +1,12 @@
 #TopCoder ContestApplet Preferences File
-#Thu Jan 23 16:43:38 GMT-03:00 2014
+#Fri Jan 31 04:41:11 BRT 2014
 com.topcoder.client.contestApplet.common.LocalPreferences.menufont=Arial
 com.topcoder.client.contestApplet.common.LocalPreferences.menufontsize=10
 com.topcoder.client.contestApplet.common.LocalPreferences.commonclasspath=
 com.topcoder.client.contestApplet.LocalPreferences.connectionType=DIRECT
-com.topcoder.jmaContestApplet.frames.codingframe.location=505\:137
-com.topcoder.jmaContestApplet.frames.codingframe.size=760\:539
-com.topcoder.jmaContestApplet.frames.codingframe.dividerloc=65
+com.topcoder.jmaContestApplet.frames.codingframe.location=12\:96
+com.topcoder.jmaContestApplet.frames.codingframe.size=1280\:776
+com.topcoder.jmaContestApplet.frames.codingframe.dividerloc=123
 editor.defaultname=CodeProcessor
 editor.1.name=CodeProcessor
 editor.1.entrypoint=codeprocessor.EntryPoint
@@ -14,7 +14,7 @@ editor.1.classpath=CodeProcessor.jar;moj.jar;fileedit.jar
 editor.1.eager=0
 editor.numplugins=1
 fileeditor.config.dirName=solve
-fileeditor.config.fileName=problem
+fileeditor.config.fileName=$CLASSNAME$
 fileeditor.config.beginCut=// BEGIN CUT HERE
 fileeditor.config.endCut=// END CUT HERE
 fileeditor.config.probdescfileextnsion=txt
@@ -27,7 +27,7 @@ fileeditor.config.breakAt=60
 fileeditor.config.htmldesc=false
 fileeditor.config.backup=false
 fileeditor.config.javatemplate=$BEGINCUT$\n$PROBLEMDESC$\n$ENDCUT$\nimport java.util.*;\npublic class $CLASSNAME$ {\n\tpublic $RC$ $METHODNAME$($METHODPARMS$) {\n\t\t\n\t}\n\tpublic static void main(String[] args) {\n\t\t$CLASSNAME$ temp \= new $CLASSNAME$();\n\t\tSystem.out.println(temp.$METHODNAME$($METHODPARMS$));\n\t}\n}
-fileeditor.config.cpptemplate=\#include <cstdio>\n\#include <cstdlib>\n\#include <cstring>\n\#include <cfloat>\n\#include <climits>\n\#include <cctype>\n\#include <cmath>\n\#include <cassert>\n\#include <ctime>\n\n\#include <iostream>\n\#include <iomanip>\n\#include <algorithm>\n\#include <sstream>\n\#include <string>\n\#include <vector>\n\#include <deque>\n\#include <list>\n\#include <queue>\n\#include <stack>\n\#include <map>\n\#include <set>\n\#include <bitset>\n\#include <complex>\n\#include <limits>\n\#include <functional>\n\#include <numeric>\n\nusing namespace std;\n\ntemplate<class T> void pv(T a, T b) { for (T i \= a; i \!\= b; ++i) cout << *i << " "; cout << endl; }\n\ntypedef long long ll;\n\n\#define fr(i,a,b) for(int i\=a;i<b;++i)\n\#define rep(x,y) for(int(x)\=(0);(x)<(y);(x)++)\n\#define dbg(x) cout << \#x << " \=\= " << x << endl\n\#define F first\n\#define S second\ntypedef pair<int,int> pii;\n\#define _ << " _ " <<\n\nstruct $CLASSNAME$ {\n    $RC$ $METHODNAME$($METHODPARMS$) {\n        return $RC$(0);\n    }\n};\n\n$BEGINCUT$\n$TESTCODE$ \n\n$DEFAULTMAIN$\n$ENDCUT$\n\n$BEGINCUT$\n/**\n$PROBLEMDESC$\n**/\n$ENDCUT$
+fileeditor.config.cpptemplate=// SRM \#\n// Verdict\: unknown\n// By Andre Saboia [UFPE]\n\n\#include <cstdio>\n\#include <cstdlib>\n\#include <cstring>\n\#include <cmath>\n\n\#include <iostream>\n\#include <algorithm>\n\#include <string>\n\#include <vector>\n\#include <queue>\n\#include <map>\n\n\#define db(x) cerr << \#x << " \=\= " << x << endl\n\#define _ << " _ " <<\n\nusing namespace std;\n\nstruct $CLASSNAME$ {\n    $RC$ $METHODNAME$($METHODPARMS$) {\n        return $RC$(0);\n    }\n};\n\n$BEGINCUT$\n$TESTCODE$ \n\n$DEFAULTMAIN$\n$ENDCUT$\n\n$BEGINCUT$\n/**\n$PROBLEMDESC$\n**/\n$ENDCUT$
 fileeditor.config.csharptemplate=using System;\r\nusing System.Collections;\r\npublic class $CLASSNAME$ {\r\n\tpublic $RC$ $METHODNAME$($METHODPARMS$) {\r\n\t\t$CARETPOSITION$\r\n\t}\r\n}
 fileeditor.config.javaextension=java
 fileeditor.config.cppextension=cpp
